Adding and updating source code for problems